# streaming-log-compression

./: README.md
test_logs/: baseline_results.json  benchmark.py  benchmark_streaming.py  benchmark_v10.py  codec_v10.py  codec_v10_streaming.py  codec_v10_true_streaming.py  codec_v5.py  codec_v6.py  codec_v7.py  codec_v8.py  codec_v9.py  columnar_binary.py  columnar_encode.py  compare_all.py  comparison_results.json  drain_adaptive.py  drain_advanced.py  drain_best.py  drain_clp.py  drain_colzstd.py  drain_encode.py  drain_full_encode.py  drain_hybrid.py  drain_hybrid_typed.py  drain_lossless.py  drain_lossless_v2.py  drain_lossless_v3.py  drain_lossless_v4.py  drain_optimal.py  drain_optimal_codec.py  drain_optimized.py  drain_simple.py  drain_smart.py  drain_sorted.py  drain_typed.py  drain_xor.py  external_baselines.json  full_benchmark.py  gen_json_logs.py  (+13 more)
v10-rs/: Cargo.toml  bench_python.sh  benchmark.sh  compare_all.sh  test_all.sh  test_files.sh  test_lossless.sh
v10-rs/src/: column.rs  config.rs  decoder.rs  drain.rs  encoder.rs  json_encoder.rs  lib.rs  main.rs  template.rs  text_encoder.rs  varint.rs
